test/operator/add_bool_num.lox
true + 123 // error: binary operation only allowed between ints or floats
